--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "type": "git",
     "url": "git@github.com:YousefED/typescript-json-schema.git"
   },
-  "licenses": [{
-    "type": "Apache",
-    "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-  }],
+  "licenses": [
+    {
+      "type": "Apache",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+    }
+  ],
   "optionalDependencies": {},
   "keywords": [
     "typescript",
@@ -28,8 +30,9 @@
     "schema"
   ],
   "dependencies": {
-    "typescript": "~1.8.0",
     "glob": "~7.0.0",
+    "lodash.assign": "^4.2.0",
+    "typescript": "~1.8.0",
     "yargs": "^4.1.0"
   },
   "devDependencies": {
